--- a/code/dev/parts/domains/domain-lua-scripting/domain-lua-code-block.tpl.html
+++ b/code/dev/parts/domains/domain-lua-scripting/domain-lua-code-block.tpl.html
@@ -4,14 +4,14 @@
       Enable This Code Block
     </label>
     <div class="col-md-9">
-      <toggle-switch name="customVcl" is-disabled="_loading" ng-model="$ctrl.luaBlock.enable" on-label="On" off-label="Off">
+      <toggle-switch class="elemLastFirstMile" name="customVcl" is-disabled="_loading" ng-model="$ctrl.luaBlock.enable" on-label="On" off-label="Off">
       </toggle-switch>
     </div>
   </div>
   <div class="form-group" ng-class="{'has-error': blockEditForm.luaBPlocation.$invalid && blockEditForm.luaBPlocation.$dirty}">
     <label for="luaBPlocation" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Specify here a website path (like “/my_url/”) the Lua code should be executed for">URL Location *</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" ng-disabled="_loading" ng-model="$ctrl.luaBlock.location" name="luaBPlocation" placeholder="like \" /my_url/\ "" ng-maxlength="150" required>
+      <input type="text" class="form-control elemLastFirstMile" ng-disabled="_loading" ng-model="$ctrl.luaBlock.location" name="luaBPlocation" placeholder="like \" /my_url/\ "" ng-maxlength="150" required>
       <div class="error-messages" ng-messages="blockEditForm.luaBPlocation.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
@@ -21,7 +21,7 @@
     <label for="luaBlockCode" class="col-sm-3 control-label" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Provide here a Lua code which should be executed for the specific website location">
       Lua Code *</label>
     <div class="col-sm-9">
-      <textarea name="luaBlockCode" ng-model="$ctrl.luaBlock.code" placeholder="" class="form-control text--courier" ng-disabled="_loading" required=>
+      <textarea name="luaBlockCode" ng-model="$ctrl.luaBlock.code" placeholder="" class="form-control text--courier elemLastFirstMile" ng-disabled="_loading" required=>
       </textarea>
       <div class="error-messages" ng-messages="blockEditForm.luaBlockCode.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
@@ -33,7 +33,7 @@
       RevAPM Admin Approval
     </label>
     <div class="col-md-9">
-      <toggle-switch name="customVcl" is-disabled="_loading" ng-model="$ctrl.luaBlock.approve" on-label="On" off-label="Off">
+      <toggle-switch class="elemLastFirstMile" name="customVcl" is-disabled="_loading" ng-model="$ctrl.luaBlock.approve" on-label="On" off-label="Off">
       </toggle-switch>
     </div>
   </div>
