--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -64,7 +64,7 @@
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="bower_components/lodash/lodash.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="bower_components/jsoneditor/dist/jsoneditor.min.js"></script>
