--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -190,7 +190,7 @@
               <form class="form-horizontal">
 
                 <div class="form-group">
-                  <label class="col-sm-6 control-label" >Hits</label>
+                  <label class="col-sm-6 control-label" >Requests</label>
                   <div class="col-sm-6">
                     <div class="form-control text-right">{{ report.traffic.count }}</div>
                   </div>
@@ -235,14 +235,14 @@
               <form class="form-horizontal">
 
                 <div class="form-group">
-                  <label class="col-sm-6 control-label" >HIT</label>
+                  <label class="col-sm-6 control-label" >Cache HIT</label>
                   <div class="col-sm-6">
                     <div class="form-control text-right">{{ report.cache_hits.HIT }}</div>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <label class="col-sm-6 control-label" >MISS</label>
+                  <label class="col-sm-6 control-label" >Cache MISS</label>
                   <div class="col-sm-6">
                     <div class="form-control text-right">{{ report.cache_hits.MISS }}</div>
                   </div>
@@ -280,11 +280,11 @@
                 <thead>
                   <tr>
                     <th style="width:28%;">Zone</th>
-                    <th class="text-right">Hits</th>
-                    <th class="text-right">Traffic sent</th>
-                    <th class="text-right">Traffic received</th>
-                    <th class="text-right">BW sent</th>
-                    <th class="text-right">BW received</th>
+                    <th class="text-right">Requests</th>
+                    <th class="text-right">Traffic Sent</th>
+                    <th class="text-right">Traffic Received</th>
+                    <th class="text-right">BW Sent</th>
+                    <th class="text-right">BW Received</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -307,11 +307,11 @@
                   <tr>
                     <th style="width:30px;"></th>
                     <th style="width:25%;">Domain</th>
-                    <th class="text-right">Hits</th>
-                    <th class="text-right">Traffic sent</th>
-                    <th class="text-right">Traffic received</th>
-                    <th class="text-right">BW sent</th>
-                    <th class="text-right">BW received</th>
+                    <th class="text-right">Requests</th>
+                    <th class="text-right">Traffic Sent</th>
+                    <th class="text-right">Traffic Received</th>
+                    <th class="text-right">BW Sent</th>
+                    <th class="text-right">BW Received</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -349,14 +349,14 @@
                             <form class="form-horizontal">
 
                               <div class="form-group">
-                                <label class="col-sm-6 control-label" >HIT</label>
+                                <label class="col-sm-6 control-label" >Cache HIT</label>
                                 <div class="col-sm-6">
                                   <div class="form-control text-right" id="cache_hit">{{ usage.cache_hits.HIT }}</div>
                                 </div>
                               </div>
 
                               <div class="form-group">
-                                <label class="col-sm-6 control-label" >MISS</label>
+                                <label class="col-sm-6 control-label" >Cache MISS</label>
                                 <div class="col-sm-6">
                                   <div class="form-control text-right" id="cache_miss">{{ usage.cache_hits.MISS }}</div>
                                 </div>
@@ -390,11 +390,11 @@
                           <thead>
                             <tr>
                               <th>Zone</th>
-                              <th class="text-right">Hits</th>
-                              <th class="text-right">Traffic sent</th>
-                              <th class="text-right">Traffic received</th>
-                              <th class="text-right">BW sent</th>
-                              <th class="text-right">BW received</th>
+                              <th class="text-right">Requests</th>
+                              <th class="text-right">Traffic Sent</th>
+                              <th class="text-right">Traffic Received</th>
+                              <th class="text-right">BW Sent</th>
+                              <th class="text-right">BW Received</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -424,7 +424,7 @@
                 <thead>
                   <tr>
                     <th style="width: 20%">Account</th>
-                    <th class="text-right">Hits</th>
+                    <th class="text-right">Requests</th>
                     <th class="text-right">Traffic Sent</th>
                     <th class="text-right">Traffic Received</th>
                     <th class="text-right">BW Sent</th>
