--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -10,7 +10,7 @@
           <i class="fa fa-mobile" style="font-size: 28px; margin-top: -14px !important;"></i>
         </div>
         Mobile Apps
-        <i ng-click="expandMenu('index.apps', $event)" class="pull-right {{ menuExpanded('index.apps') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.apps', $event)" class="pull-right {{ menuExpanded('index.apps') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a id="side-menu-sub-item__apps-ios" ui-sref-active="active" ui-sref="index.apps.ios" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-apple"></i> iOS
@@ -28,7 +28,7 @@
           <i class="fa fa-signal"></i>
         </div>
         Apps Analytics
-        <i ng-click="expandMenu('index.mobile', $event)" class="pull-right {{ menuExpanded('index.mobile') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.mobile', $event)" class="pull-right {{ menuExpanded('index.mobile') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref="index.mobile.traffic" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-area-chart"></i> Traffic Levels
@@ -52,7 +52,7 @@
           <i class="fa fa-desktop"></i>
         </div>
         Web
-        <i ng-click="expandMenu('index.webApp', $event)" class="pull-right {{ menuExpanded('index.webApp') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.webApp', $event)" class="pull-right {{ menuExpanded('index.webApp') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a id="side-menu-sub-item__webApp-domains" ui-sref-active="active" ui-sref="index.webApp.domains" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-list"></i> Domains
@@ -83,7 +83,7 @@
           <i class="fa fa-line-chart"></i>
         </div>
         Web Analytics
-        <i ng-click="expandMenu('index.reports', $event)" class="pull-right {{ menuExpanded('index.reports') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.reports', $event)" class="pull-right {{ menuExpanded('index.reports') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a id="side-menu-sub-item__reports-proxy" ui-sref-active="active" ui-sref="index.reports.proxy" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-area-chart"></i> Proxy Traffic
@@ -111,7 +111,7 @@
           <i class="glyphicon glyphicon-list-alt"></i>
         </div>
         DNS Service
-        <i ng-click="expandMenu('index.dnsServices', $event)" class="pull-right {{ menuExpanded('index.dnsServices') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.dnsServices', $event)" class="pull-right {{ menuExpanded('index.dnsServices') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref-active-if="{class: 'active', state: 'index.dnsServices.dns_zone_records'}" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item">
         <i class="sub-menu-icon fa fa-tasks"></i> DNS Zones
@@ -131,7 +131,7 @@
           <i class="fa fa-gears"></i>
         </div>
         Admin
-        <i ng-click="expandMenu('index.accountSettings', $event)" class="pull-right {{ menuExpanded('index.accountSettings') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.accountSettings', $event)" class="pull-right {{ menuExpanded('index.accountSettings') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref="index.accountSettings.users" class="side-menu-sub-item" ng-if="!userService.isUser()">
         <i class="sub-menu-icon fa fa-users"></i> Users
@@ -160,7 +160,7 @@
           <i class="fa fa-windows"></i>
         </div>
         Azure Marketplace
-        <i ng-click="expandMenu('index.azureMarketplace', $event)" class="pull-right {{ menuExpanded('index.azureMarketplace') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.azureMarketplace', $event)" class="pull-right {{ menuExpanded('index.azureMarketplace') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref="index.azureMarketplace.subscriptions" class="side-menu-sub-item" ng-if="!userService.isUser()">
         <i class="sub-menu-icon fa fa-users"></i> Subscriptions
@@ -178,7 +178,7 @@
           <i class="fa fa-credit-card"></i>
         </div>
         Billing
-        <i ng-click="expandMenu('index.billing', $event)" class="pull-right {{ menuExpanded('index.billing') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.billing', $event)" class="pull-right {{ menuExpanded('index.billing') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a ui-sref-active="active" ui-sref="index.billing.usage" class="side-menu-sub-item" ng-if="!userService.isUser()">
         <i class="sub-menu-icon fa fa-balance-scale"></i> Usage Report
@@ -199,7 +199,7 @@
           <i class="fa fa-support"></i>
         </div>
         Support
-        <i ng-click="expandMenu('index.help', $event)" class="pull-right {{ menuExpanded('index.help') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
+        <i ng-click="expandMenu('index.help', $event)" class="pull-right {{ menuExpanded('index.help') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
       </a>
       <a href="https://api.revapm.net/" class="side-menu-sub-item" target="_blank">
         <i class="sub-menu-icon fa fa-wrench"></i> API Documentation
