Minor changes in tooltip messages

--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -300,7 +300,7 @@
               <div class="col-sm-12 form-group">
                 <textarea id="comment" class="form-control inline-block" name="comment" ng-model="model.comment" placeholder="Comment (300 characters max)" ng-maxlength="300" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                 </textarea>
-                <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Comment (300 characters max)">
+                <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
               </div>
