--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -220,7 +220,7 @@
                   <div class="col-sm-12 form-group">
                   <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                   </textarea>
-                   <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Comment">
+                   <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">
                     <i class="fa fa-question-circle"></i>
                   </label>
                   </div>
