--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -151,12 +151,14 @@ specify '11.11.11.11' in origin server name field above and 'www.example.com' in
           -->
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label">Comment</label>
-            <div class="col-md-10">
-              <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control " name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading" style="margin-right: 4px;">
-              </textarea>
-              <!--<label for="comment" class=text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment">
-                   <i class="fa fa-question-circle"></i>
-              </label>-->
+              <div class="col-md-10">
+                <div class="col-sm-12 form-group">
+                <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading" style="margin-right: 4px;">
+                </textarea>
+                <label for="comment" class=text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment">
+                    <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -171,14 +173,12 @@ specify '11.11.11.11' in origin server name field above and 'www.example.com' in
               </a>
               <button class="btn btn-success" id="create_domain"
                       ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model) || createForm.$invalid || isReadOnly()" ng-click="createDomain(model, false)">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                      <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp;
                 Create Domain
               </button>
               <button class="btn btn-success" id="create_domain_and_add_more"
                       ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model) || createForm.$invalid || isReadOnly()" ng-click="createDomain(model, true);createForm.$setPristine()">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                      <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i>&nbsp;
                 Create And Add More
               </button>
             </div>
