--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -57,18 +57,24 @@
               <div class="form-group" ng-class="{'has-error': editForm.app_name.$invalid && editForm.app_name.$dirty}">
                 <label for="domainName" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" disabled autofocus ng-model="modelInfo.domain_name" id="domain_name" name="domainName" placeholder="Domain Name">
+                  <input type="text" class="form-control inline-block" disabled autofocus ng-model="modelInfo.domain_name" id="domain_name" name="domainName" placeholder="Domain Name">
+                  <label for="domainName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                 </div>
               </div>
               <div class="form-group" ng-class="{'has-error': editForm.cname.$invalid && editForm.cname.$dirty}">
                 <label for="cname" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain CNAME</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" disabled ng-model="modelInfo.cname" id="cname" name="cname" placeholder="Domain CNAME" style="float:left">
+                  <input type="text" class="form-control inline-block" disabled ng-model="modelInfo.cname" id="cname" name="cname" placeholder="Domain CNAME">
+                 <label for="cname" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                   <button class="btn btn-primary btn-copy--cname" clipboard text="modelInfo.cname" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the CNAME to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
                 </div>
               </div>
               <div class="form-group" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
-                <label for="accountId" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Select company name the domain should be associated with">Account</label>
+                <label for="accountId" class="col-sm-3 control-label">Account</label>
                 <div class="col-sm-9">
                   <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
                     <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
@@ -76,6 +82,9 @@
                       <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                     </ui-select-choices>
                   </ui-select>
+                  <label for="accountId" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select company name the domain should be associated with">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                   <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
                   </div>
@@ -133,6 +142,9 @@
                   </label>
                   <label class="radio-inline">
                     <input type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
+                  </label>
+                  <label for="origin_secure_protocol" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
               </div>
@@ -192,6 +204,9 @@
                 <div class="col-md-9">
                   <toggle-switch is-disabled="_loading" ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
                   </toggle-switch>
+                  <label for="enable_quic" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                 </div>
               </div>
               <!-- Block All Web Crawlers  -->
@@ -202,6 +217,9 @@
                 <div class="col-md-9">
                   <toggle-switch is-disabled="_loading" ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
                   </toggle-switch>
+                  <label for="block_crawlers" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                 </div>
               </div>
               <!-- RUM Data Collection  -->
@@ -212,11 +230,14 @@
                 <div class="col-md-9">
                   <toggle-switch is-disabled="_loading" ng-model="model.rev_component_co.enable_rum" on-label="On" off-label="Off">
                   </toggle-switch>
+                  <label for="enable_rum" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                 </div>
               </div>
               <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&  editForm.comment.$dirty }">
                 <label for="comment" class="col-sm-3 control-label">Comment</label>
-                <div class="col-md-6">
+                <div class="col-md-9">
                   <div class="col-sm-12 form-group">
                   <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                   </textarea>
@@ -236,7 +257,10 @@
                   Blue Triangle Tech. Key
                 </label>
                 <div class="col-md-9">
-                  <input type="text" class="form-control" ng-disabled="_loading" name="bttKey" ng-model="model.btt_key" placeholder="BTT API key for the domain" ng-pattern="/^[0-9a-fA-F]{32}$/">
+                  <input type="text" class="form-control inline-block" ng-disabled="_loading" name="bttKey" ng-model="model.btt_key" placeholder="BTT API key for the domain" ng-pattern="/^[0-9a-fA-F]{32}$/">
+                  <label for="bttKey" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                    <i class="fa fa-question-circle"></i>
+                  </label>
                   <div class="error-messages" ng-messages="editForm.bttKey.$error" role="alert" ng-messages-multiple>
                     <div ng-message="pattern" class="alert-text alert-text--pattern">The BTT key format is not correct</div>
                     <div ng-messages-include="parts/shared/error-messages.html"></div>
